--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Founders JS Educational (from https://developer.mozilla.org/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript)</title>
-        <style>
-            * { padding: 0; margin: 0; }
-            canvas { background: #eee; display: block; margin: 0 auto; }
-        </style>
+        <link rel="stylesheet" type="text/css" href="style.css"></link>
     </head>
    
     <body>
