--- a/final.html
+++ b/final.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Founders JS Educational (from https://developer.mozilla.org/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript)</title>
+        <title>Founders JS Educational</title>
         <link rel="stylesheet" type="text/css" href="style.css"></link>
     </head>
    
